--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,9 +7,7 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/about/about";
 
-@import "../pages/contact/contact";
-
-@import "../pages/home/home";
-@import "../pages/login/login";
+@import "../pages/apps/apps.scss";
+@import "../pages/login/login.scss";
+@import "../pages/account/account.scss";
