--- a/app/pages/apps/apps.scss
+++ b/app/pages/apps/apps.scss
@@ -1,3 +1,12 @@
 .apps {
+  background-color:#F5F5F5;
+}
 
+.menu-app-icon-list{
+  width: 70px;
+  max-height: 70px;
+  text-align: center;
+}
+.menu-app {
+  text-align: center;
 }
