--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,7 +7,18 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
+@import "../pages/login/login.scss";
 
 @import "../pages/apps/apps.scss";
-@import "../pages/login/login.scss";
+@import "../pages/data-entry-home/data-entry-home.scss";
+@import "../pages/report-home/report-home.scss";
+@import "../pages/tracker-capture-home/tracker-capture-home.scss";
+@import "../pages/event-capture-home/event-capture-home.scss";
+@import "../pages/dashboard-home/dashboard-home.scss";
+
 @import "../pages/account/account.scss";
+@import "../pages/profile/profile.scss";
+@import "../pages/about/about.scss";
+@import "../pages/help/help.scss";
+@import "../pages/settings/settings.scss";
+@import "../pages/update-manager/update-manager.scss";
