view fofr reports, report parameter selection as  well as update database structure

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,6 +12,8 @@
 @import "../pages/apps/apps.scss";
 @import "../pages/data-entry-home/data-entry-home.scss";
 @import "../pages/report-home/report-home.scss";
+@import "../pages/report-view/report-view.scss";
+@import "../pages/report-parameter-selection/report-parameter-selection.scss";
 @import "../pages/tracker-capture-home/tracker-capture-home.scss";
 @import "../pages/event-capture-home/event-capture-home.scss";
 @import "../pages/dashboard-home/dashboard-home.scss";
