--- a/src/pages/data-entry-form/data-entry-form.scss
+++ b/src/pages/data-entry-form/data-entry-form.scss
@@ -2,6 +2,10 @@ page-data-entry-form {
   .dataEntryForm{
     background-color: #f5f5f5;
   }
+  .entryFormContainer{
+    box-shadow: 2px 2px 3px  #888888;
+    padding: 4px;
+  }
   .sectionHeader{
     padding-top : 0px;
     padding-bottom: 0px;
@@ -11,5 +15,8 @@ page-data-entry-form {
   .entryFormFields{
     height:350px;
     overflow:auto;
+  }
+  .inputLabel{
+    margin-bottom: 4px;
   }
 }
