add capability to sync datavaluse,undo complete

--- a/src/pages/data-entry-form/data-entry-form.scss
+++ b/src/pages/data-entry-form/data-entry-form.scss
@@ -17,6 +17,8 @@ page-data-entry-form {
     overflow:auto;
   }
   .inputLabel{
+    padding-bottom: 4px;
+    padding-top: 4px;
     margin-bottom: 4px;
   }
 }
