--- a/src/pages/event-capture-home/event-capture-home.scss
+++ b/src/pages/event-capture-home/event-capture-home.scss
@@ -2,4 +2,26 @@ page-event-capture-home {
   .event-capture-home {
     background-color: #f5f5f5;
   }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  /* Zebra striping */
+  tr:nth-of-type(odd) {
+    background: #EAEFF5;
+  }
+  tr:nth-of-type(even) {
+    background: #FBFBFB;
+  }
+  th {
+    background: #FBFBFB;
+    color: #39547D;
+    font-weight: bold;
+  }
+  td, th {
+    padding: 6px;
+    border: 1px solid #ADB7C5;
+    text-align: left;
+  }
 }
