--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $background-color:  #fff;
 
 $colors: (
   primary:    #387ef5,
-  secondary:  #32db64,
+  secondary:  #5CB85C,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
