uodate background color as well as increase buttton selections as well as improve ui on data entry form selection and event capture selectiions

--- a/src/pages/data-entry-home/data-entry-home.scss
+++ b/src/pages/data-entry-home/data-entry-home.scss
@@ -1,5 +1,21 @@
 page-data-entry-home {
   .data-entry-home {
-    background-color:#F5F5F5;
+    background-color:#E4E4E4;
   }
+
+  .selectionLabel{
+    font-size: 18px;
+  }
+  .selectionLabel{
+    font-size: 18px;
+  }
+  .dataEntryButton{
+    color: #7A7A7A;
+  }
+
+  .selectionHints{
+    word-wrap: break-word!important;
+    font-size: 15px;
+  }
+
 }
