--- a/src/pages/event-capture-form/event-capture-form.scss
+++ b/src/pages/event-capture-form/event-capture-form.scss
@@ -1,6 +1,6 @@
 page-event-capture-form {
   .event-capture-form {
-    background-color: #f5f5f5;
+    background-color: #E4E4E4;
   }
 
   .entryFormContainer{
