--- a/src/pages/organisation-units/organisation-units.scss
+++ b/src/pages/organisation-units/organisation-units.scss
@@ -1,6 +1,6 @@
 page-organisation-units {
   .organisation-units {
-    background-color:#F5F5F5;
+    background-color:#E4E4E4;
   }
   .modalData{
     padding-top:1%;
