--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,7 +10,7 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-$text-color:        #000;
+$text-color:        #7A7A7A;
 $background-color:  #fff;
 
 
@@ -27,6 +27,8 @@ $colors: (
   secondary:  #5CB85C,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  font-color: #7A7A7A,
+  whitecolor: #FFFFFF,
   dark:       #222,
   favorite:   #69BB7B,
   current: #ffa500
