--- a/src/pages/dashboard-items/dashboard-items.scss
+++ b/src/pages/dashboard-items/dashboard-items.scss
@@ -3,6 +3,6 @@ page-dashboard-items {
     display: block;
   }
   .dashboardItems{
-    background-color: #f5f5f5;
+    background-color: #E4E4E4;
   }
 }
