--- a/src/pages/data-entry-form/data-entry-form.scss
+++ b/src/pages/data-entry-form/data-entry-form.scss
@@ -1,12 +1,8 @@
 page-data-entry-form {
   .dataEntryForm{
-    background-color: #f5f5f5;
+    background-color: #E4E4E4;
   }
 
-  .entryFormContainer{
-    box-shadow: 2px 2px 3px  #888888;
-    padding: 4px;
-  }
   .sectionHeader{
     padding-top : 0px;
     padding-bottom: 0px;
