--- a/src/pages/event-capture-home/event-capture-home.scss
+++ b/src/pages/event-capture-home/event-capture-home.scss
@@ -1,6 +1,14 @@
 page-event-capture-home {
   .event-capture-home {
-    background-color: #f5f5f5;
+    background-color: #E4E4E4;
+  }
+
+  .selectionLabel{
+    font-size: 18px;
+  }
+
+  .selectionHints{
+    font-size: 17px;
   }
 
   table {
