--- a/src/pages/period-selection/period-selection.scss
+++ b/src/pages/period-selection/period-selection.scss
@@ -1,5 +1,8 @@
 page-period-selection {
   .periodSelection {
-    background: #f5f5f5;
+    background: #E4E4E4;
+  }
+  .dataEntryButton{
+    color: #7A7A7A;
   }
 }
