--- a/src/pages/data-entry-form/data-entry-form.scss
+++ b/src/pages/data-entry-form/data-entry-form.scss
@@ -11,7 +11,8 @@ page-data-entry-form {
   }
   .inputLabel{
     padding-bottom: 4px;
-    padding-top: 4px;
+    padding-top: 2px;
     margin-bottom: 4px;
+    font-size: 1.5rem
   }
 }
