--- a/src/pages/data-entry-home/data-entry-home.scss
+++ b/src/pages/data-entry-home/data-entry-home.scss
@@ -4,18 +4,19 @@ page-data-entry-home {
   }
 
   .selectionLabel{
-    font-size: 18px;
+    font-size: 18px !important;
   }
   .selectionLabel{
-    font-size: 18px;
+    font-size: 18px !important;
   }
   .dataEntryButton{
     color: #7A7A7A;
+    font-size: 18px !important;
   }
 
   .selectionHints{
     word-wrap: break-word!important;
-    font-size: 15px;
+    font-size: 18px !important;
   }
 
 }
