--- a/src/pages/event-capture-home/event-capture-home.scss
+++ b/src/pages/event-capture-home/event-capture-home.scss
@@ -4,11 +4,11 @@ page-event-capture-home {
   }
 
   .selectionLabel{
-    font-size: 18px;
+    font-size: 18px !important;
   }
 
   .selectionHints{
-    font-size: 17px;
+    font-size: 18px !important;
   }
 
   table {
