increase fonts in cards

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -45,4 +45,31 @@
   font-weight: normal;
 }
 
+//cards
+.card-md h1 {
+  font-size: 22px;
+  color : #7A7A7A;
+}
+.card-header-md {
+  padding: 16px;
+  font-size: 19px;
+  color : #7A7A7A;
+}
+.card-md h2 {
+  font-size: 20px;
+  color : #7A7A7A;
+}
+.card-md h3,
+.card-md h4,
+.card-md h5,
+.card-md h6 {
+  font-size: 18px;
+  color : #7A7A7A;
+}
+
+.card-md p {
+  font-size: 18px;
+  color : #7A7A7A;
+}
+
 
