preselect organisation unit on data entry as well as disable selections instead ot pop message to select abouve filed in entry form sleections

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -35,6 +35,10 @@
 .button-md {
   font-weight: normal;
 }
+.dataEntryButton{
+  color: #7A7A7A;
+  font-size: 18px !important;
+}
 
 //items in listing
 .item-md {
