update size of login button as well as capitalize hisptz slogan

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -35,6 +35,10 @@
 .button-md {
   font-weight: normal;
 }
+
+.normalButton {
+  font-size: 18px !important;
+}
 .dataEntryButton{
   color: #7A7A7A;
   font-size: 18px !important;
