replace dhis 2 logo with dhis 2 touch

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -2,6 +2,11 @@ page-login {
   .login {
     background-color:#1D5288;
   }
+
+  .logo {
+    max-width: 45%;
+    margin:auto;
+  }
   .topSLogan{
     margin-top:15%;
     text-align: center;
