align app iocns and titles at the center

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -120,4 +120,13 @@ td, th {
   color : #7A7A7A;
 }
 
-
+//app icons & titles
+.menu-app-icon-list{
+  width: 80px;
+  max-height: 80px;
+  text-align: center;
+  margin: auto;
+}
+.menu-app {
+  text-align: center;
+}
