--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,6 +13,7 @@
 $text-color:        #7A7A7A;
 $background-color:  #fff;
 $font-size-base : 18px;
+$action-sheet-md-title-font-size : 18px;
 
 
 // Named Color Variables
