add font size consistency on data entry as well as event capture

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -131,6 +131,22 @@ td, th {
   color : #7A7A7A;
 }
 
+//font label
+.inputLabel{
+  padding-bottom: 4px;
+  padding-top: 4px;
+  margin-bottom: 4px;
+}
+p,h3,h4,h5,h6{
+  font-size: 18px;
+}
+h2{
+  font-size: 19px;
+}
+h1{
+  font-size: 20px;
+}
+
 .card-md p {
   font-size: 18px;
   color : #7A7A7A;
