--- a/src/pages/setting-home/setting-home.scss
+++ b/src/pages/setting-home/setting-home.scss
@@ -2,4 +2,8 @@ page-setting-home {
   .setting-home{
     background-color: #E4E4E4;
   }
+
+  .settingContents{
+    background-color: #F4F4F4;
+  }
 }
