update visualization card as well as add selection of dashboards

--- a/src/pages/dash-board-home/dash-board-home.scss
+++ b/src/pages/dash-board-home/dash-board-home.scss
@@ -2,4 +2,14 @@ page-dash-board-home {
   .dashboardHome{
     background-color: #E4E4E4;
   }
+
+  ion-select {
+    max-width: 100%;
+  }
+  .select-md .select-icon {
+    position: inherit;
+  }
+  .select-ios .select-icon {
+    position: inherit;
+  }
 }
