--- a/src/pages/visualization-card/visualization-card.scss
+++ b/src/pages/visualization-card/visualization-card.scss
@@ -1,6 +1,21 @@
 page-visualization-card {
   chart {
     display: block;
+    .highcharts-container{
+      margin:auto;
+      width: 90%;
+      text-align: left;
+    }
+  }
+
+  ion-col[width-90] {
+    max-width: 86.5%;
+  }
+
+  .visualizationCard {
+    min-height : 200px;
+    overflow:auto;
+    background: #FFFFFF;
   }
 
   .chart-icon{
@@ -13,5 +28,10 @@ page-visualization-card {
 
   .fab {
     display: inline-block !important;
+  }
+
+  img{
+    //width : 40px!important;
+    //margin : auto;
   }
 }
