--- a/src/pages/update-manager-home/update-manager-home.scss
+++ b/src/pages/update-manager-home/update-manager-home.scss
@@ -2,4 +2,7 @@ page-update-manager-home {
   .updateManager{
     background-color: #E4E4E4;
   }
+  .updateManagerContents{
+    background-color: #F4F4F4;
+  }
 }
