--- a/src/pages/visualization-card/visualization-card.scss
+++ b/src/pages/visualization-card/visualization-card.scss
@@ -2,6 +2,7 @@ page-visualization-card {
   chart {
     display: block;
     .highcharts-container{
+      padding-top: 5px;
       margin:auto;
       width: 90%;
       text-align: left;
@@ -9,20 +10,32 @@ page-visualization-card {
   }
 
   .item-md.item-block .item-inner {
-    border-bottom: 0px solid #dedede!important;
+
   }
   .item-ios.item-block .item-inner {
     border-bottom: 0px solid #c8c7cc!important;;
   }
 
+
   ion-col[width-90] {
     max-width: 86.5%;
   }
+
+
 
   .visualizationCard {
     min-height : 200px;
     overflow:auto;
     background: #FFFFFF;
+  }
+
+  .visualizationLoader{
+    padding-top: 75px;
+  }
+
+  ion-spinner * {
+    width: 50px;
+    height: 50px;
   }
 
   .chart-icon{
