--- a/src/pages/dash-board-home/dash-board-home.scss
+++ b/src/pages/dash-board-home/dash-board-home.scss
@@ -19,6 +19,11 @@ page-dash-board-home {
   ion-label {
     white-space: normal;
   }
+
+  .refreshPanel{
+    padding-top: 10px;
+  }
+
   ion-col {
     padding-top: 0px;
     padding-right: 0px;
