--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,28 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url('../assets/library/fonts/UyBMtLsHKBKXelqf4x7VRQ.woff2') format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url('../assets/library/fonts/1YwB1sO8YE1Lyjf12WNiUA.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
+*{
+  font-family: "Lato","Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
 
 //action sheet style for tool tips
 .action-sheet-md .action-sheet-title {
