--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,42 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+@-webkit-keyframes slideInFromLeft {
+  0% {
+    -webkit-transform: translate3d(-100%,0,0);
+  }
+  100% {
+    -webkit-transform: translate3d(0,0,0);
+  }
+}
+
+@-webkit-keyframes slideInFromRight {
+  0% {
+    -webkit-transform: translate3d(100%,0,0);
+  }
+  100% {
+    -webkit-transform: translate3d(0,0,0);
+  }
+}
+
+.slide-in-from-left{
+  -webkit-animation: slideInFromLeft ease-in 1;
+  animation: slideInFromLeft ease-in 1;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 700ms;
+  animation-duration: 700ms;
+}
+
+.slide-in-from-right {
+  -webkit-animation: slideInFromRight ease-in 1;
+  animation: slideInFromRight ease-in 1;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
+  -webkit-animation-duration: 700ms;
+  animation-duration: 700ms;
+}
+
 /* latin-ext */
 @font-face {
   font-family: 'Lato';
