--- a/src/pages/dash-board-home/dash-board-home.scss
+++ b/src/pages/dash-board-home/dash-board-home.scss
@@ -3,6 +3,44 @@ page-dash-board-home {
     background-color: #E4E4E4;
   }
 
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
+
+  .list-separator{
+    height:1px;
+    border-bottom: 1px solid #dedede;
+    margin-top:3px;
+    margin-bottom:3px;
+  }
+
+  .dashboard-separator{
+    height:3px;
+    border-bottom: 1px solid #dedede;
+  }
+
+  .button-md, .button-ios {
+    margin: 0px !important;
+  }
+
+  .searchbar-md, .searchbar-ios {
+    padding: 5px !important;
+  }
+
+  ion-col {
+    padding-top: 0px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-button: 0px;
+  }
+
+
   ion-select {
     max-width: 100%;
   }
