--- a/src/pages/dash-board-home/dash-board-home.scss
+++ b/src/pages/dash-board-home/dash-board-home.scss
@@ -34,21 +34,10 @@ page-dash-board-home {
   }
 
   ion-col {
-    padding-top: 0px;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-button: 0px;
-  }
-
-
-  ion-select {
-    max-width: 100%;
-  }
-  .select-md .select-icon {
-    position: inherit;
-  }
-  .select-ios .select-icon {
-    position: inherit;
+    padding-top: 0px!important;
+    padding-right: 5px!important;
+    padding-left: 5px !important;
+    padding-button: 0px !important;
   }
 
   .visualizationHeader {
@@ -60,30 +49,6 @@ page-dash-board-home {
 
   .refreshPanel{
     padding-top: 10px;
-  }
-
-  ion-col {
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-left: 5px;
-    padding-button: 5px;
-  }
-
-  .loadingMessage {
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-left: 5px;
-    padding-button: 5px;
-  }
-
-  .dashHeaderSeparator {
-    height: 10px;
-    background-color: #E4E4E4;
-  }
-
-  .visualizerHeaderSeparator {
-    height: 1px;
-    background-color: #E4E4E4;
   }
 
 }
