--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,8 +15,8 @@ $font-path: "../assets/fonts";
 
 $text-color:        #7A7A7A;
 $background-color:  #fff;
-$font-size-base : 18px;
-$action-sheet-md-title-font-size : 18px;
+$font-size-base : 1.8rem;
+$action-sheet-md-title-font-size : 1.8rem;
 
 // Named Color Variables
 // --------------------------------------------------
