decrease background color intensity

--- a/src/pages/dash-board-home/dash-board-home.scss
+++ b/src/pages/dash-board-home/dash-board-home.scss
@@ -1,6 +1,6 @@
 page-dash-board-home {
   .dashboardHome {
-    background-color: #E4E4E4;
+    background-color: #F4F4F4;
   }
 
   .item-md.item-block .item-inner {
