--- a/src/pages/period-selection/period-selection.scss
+++ b/src/pages/period-selection/period-selection.scss
@@ -1,6 +1,6 @@
 page-period-selection {
   .periodSelection {
-    background: #E4E4E4;
+    background-color: #F4F4F4;
   }
   .dataEntryButton{
     color: #7A7A7A;
