--- a/src/pages/event-field-selection-menu/event-field-selection-menu.scss
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.scss
@@ -1,5 +1,5 @@
 page-event-field-selection-menu {
     .eventListSelection{
-      background-color: #E4E4E4;
+      background-color: #F4F4F4;
     }
 }
