--- a/src/pages/report-view/report-view.scss
+++ b/src/pages/report-view/report-view.scss
@@ -1,6 +1,6 @@
 page-report-view {
   .report{
-    background-color: #E4E4E4;
+    background-color: #F4F4F4;
   }
   .reportView{
     overflow: auto;
