--- a/src/pages/update-manager-home/update-manager-home.scss
+++ b/src/pages/update-manager-home/update-manager-home.scss
@@ -1,6 +1,6 @@
 page-update-manager-home {
   .updateManager{
-    background-color: #E4E4E4;
+    background-color: #F4F4F4;
   }
   .updateManagerContents{
     background-color: #F4F4F4;
