add capability to cancel login process

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -17,6 +17,9 @@ $text-color:        #7A7A7A;
 $background-color:  #fff;
 $font-size-base : 1.8rem;
 $action-sheet-md-title-font-size : 1.8rem;
+$list-inset-ios-border-radius : 5px;
+$list-inset-md-border-radius : 5px;
+$list-inset-wp-border-radius : 5px;
 
 // Named Color Variables
 // --------------------------------------------------
