--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -8,9 +8,9 @@ page-login {
     margin:auto;
   }
   .topSLogan{
-    margin-top:1%;
+    //margin-top:1%;
     text-align: center;
-    margin-bottom:1%;
+    //margin-bottom:1%;
   }
 
   .topSLogan p{
