--- a/src/pages/data-entry-home/data-entry-home.scss
+++ b/src/pages/data-entry-home/data-entry-home.scss
@@ -2,4 +2,10 @@ page-data-entry-home {
   .data-entry-home {
     background-color: #F4F4F4;
   }
+  .list-md .item-block .item-inner {
+    border-bottom: 0px solid #F4F4F4 !important;
+  }
+  .item-md.item-block .item-inner {
+    border-bottom: 0px solid #F4F4F4 !important;
+  }
 }
