--- a/src/pages/data-element-sync/data-element-sync.scss
+++ b/src/pages/data-element-sync/data-element-sync.scss
@@ -1,3 +1,8 @@
 page-data-element-sync {
-
+  .contents{
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    padding: 5px 16px 5px;
+    margin-bottom: 3px;
+  }
 }
