remove white background on apps icons and apply round border

--- a/src/pages/apps/apps.scss
+++ b/src/pages/apps/apps.scss
@@ -2,4 +2,8 @@ page-apps {
   .apps {
     background-color: #F4F4F4;
   }
+  .contents{
+    border: 1px solid #E6E6E7;
+    border-radius: 1.1rem;
+  }
 }
