--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,6 +18,7 @@
 .apps-contents{
   border: 1px solid #E6E6E7;
   border-radius: 1.1rem;
+  padding: 5px 16px 5px;
 }
 .entry-selection-container{
   border: 1px solid #E6E6E7;
