remove white backgound on input fields as well as add round corner around input fields for add/edit event as well as data entry

--- a/src/pages/data-entry-form/data-entry-form.scss
+++ b/src/pages/data-entry-form/data-entry-form.scss
@@ -9,4 +9,23 @@ page-data-entry-form {
     color: #387ef5;
     text-align: center;
   }
+
+  .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
+    background-color: #F4F4F4;
+  }
+  .item-md,.item-ios{
+    border: 1px solid #E6E6E7;
+    border-radius: 0.5rem;
+  }
+
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
+
 }
