--- a/src/pages/event-capture-form/event-capture-form.scss
+++ b/src/pages/event-capture-form/event-capture-form.scss
@@ -17,4 +17,22 @@ page-event-capture-form {
   .required{
     color: #ff252f;
   }
+
+  .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
+    background-color: #F4F4F4;
+  }
+  .item-md,.item-ios{
+    border: 1px solid #E6E6E7;
+    border-radius: 0.5rem;
+  }
+
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
 }
