change pagination layout

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -38,8 +38,8 @@
 }
 .pagination-label{
   text-align: center;
-  padding-top: 2.1rem;
-  padding-bottom: 2.1rem;
+  color: #7A7A7A;
+  padding-top: 1.5rem;
 }
 
 @-webkit-keyframes slideInFromLeft {
