--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   font-color: #7A7A7A,
-  whitecolor: #FFFFFF,
+  whitecolor: #F4F4F4,
   dark:       #222,
   favorite:   #69BB7B,
   current: #ffa500
