remove white background on uploading data via sms as well as bottom border on each accordion

--- a/src/pages/update-manager-home/update-manager-home.scss
+++ b/src/pages/update-manager-home/update-manager-home.scss
@@ -5,4 +5,14 @@ page-update-manager-home {
   .updateManagerContents{
     background-color: #F4F4F4;
   }
+
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #dedede;
+  }
 }
