--- a/src/pages/organisation-units-tree/organisation-units-tree.scss
+++ b/src/pages/organisation-units-tree/organisation-units-tree.scss
@@ -1,3 +1,18 @@
 page-organisation-units-tree {
+  .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
+    background-color: #F4F4F5;
+  }
+  .item-md,.item-ios{
+    background-color: #F4F4F5;
+  }
 
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 1px solid #E6E6E7;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 1px solid #E6E6E7;
+  }
 }
