apply three view on apps and utility appps

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,7 +16,7 @@
 // automatically applied to the <body> element in the app.
 
 .apps-contents{
-  border: 1px solid #E6E6E7;
+  border: 0.5px solid #E6E6E7;
   border-radius: 1.1rem;
   padding: 5px 16px 5px;
 }
@@ -247,4 +247,5 @@ h1{
 }
 .menu-app {
   text-align: center;
+  font-size: 1.2rem;
 }
