--- a/src/pages/report-selection-period/report-selection-period.scss
+++ b/src/pages/report-selection-period/report-selection-period.scss
@@ -6,6 +6,13 @@ page-report-selection-period {
     color: #7A7A7A;
   }
 
+  .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
+    background-color: #F4F4F4;
+  }
+  .item-md,.item-ios{
+    background-color: #F4F4F4;
+  }
+
   .item-md.item-block .item-inner {
     padding-right: 5px;
     border-bottom: 1px solid #E6E6E7;
