--- a/src/pages/data-set-sync/data-set-sync.scss
+++ b/src/pages/data-set-sync/data-set-sync.scss
@@ -1,8 +1,27 @@
 page-data-set-sync {
   .contents{
-    background-color: #FFFFFF;
-    border-radius: 5px;
-    padding: 5px 16px 5px;
-    margin-bottom: 3px;
+    background-color: #F4F4F4;
+    border: 1px solid #E6E6E7;
+    border-radius: 0.1rem;
+    padding: 5px 10px 5px;
+    margin-top:5px;
+    margin-bottom:5px;
+  }
+
+  .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
+    background-color: #F4F4F4;
+  }
+  .item-md,.item-ios{
+    background-color: #F4F4F4;
+  }
+
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 1px solid #E6E6E7;
+  }
+
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 1px solid #E6E6E7;
   }
 }
