--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -55,6 +55,22 @@
   padding-top: 1.5rem;
 }
 
+.logo {
+  max-width: 30%;
+  margin:auto;
+}
+.topSLogan{
+  margin-top:5%;
+  text-align: center;
+  margin-bottom:0%;
+}
+
+.topSLogan p{
+  color:#82B1FF;
+  text-align:center;
+  font-style: italic;
+}
+
 @-webkit-keyframes slideInFromLeft {
   0% {
     -webkit-transform: translate3d(-100%,0,0);
@@ -127,6 +143,11 @@
   font-size: 1.8rem;
   text-align: left;
   color: #757575;
+}
+
+//input fields
+.text-input-wp {
+  border: 0px solid rgba(0, 0, 0, 0.5);
 }
 
 //items
