--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,20 +3,6 @@ page-login {
     background-color:#1D5288;
   }
 
-  .logo {
-    max-width: 45%;
-    margin:auto;
-  }
-  .topSLogan{
-    text-align: center;
-  }
-
-  .topSLogan p{
-    color:#82B1FF;
-    text-align:center;
-    font-style: italic;
-  }
-
   .bottomSLogan{
     text-align: center;
     margin-bottom:2%;
@@ -25,5 +11,7 @@ page-login {
   .bottomSLogan p{
     font-style: italic;
     color: #ffffff;
+    text-transform: lowercase;
+    font-size: 0.3rem;
   }
 }
