add cascade view of help contents

--- a/src/pages/help-contents/help-content.scss
+++ b/src/pages/help-contents/help-content.scss
@@ -2,7 +2,11 @@ page-help-contents {
   .help-content{
     background-color: #F4F4F4;
   }
-  .help-content-subContents {
-
+  .help-contents-card {
+    border: 1px solid #E6E6E7;
+    border-radius: 0.1rem;
+    padding: 5px 10px 5px;
+    margin-top:5px;
+    margin-bottom:5px;
   }
 }
