add toggled menu for sync page with icons

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -239,6 +239,13 @@
   padding-bottom : 1.3rem;
 }
 
+.item-card{
+  border: 1px solid #E6E6E7;
+  border-radius: 0.2rem;
+  padding: 5px 10px 5px;
+  margin-top:5px;
+  margin-bottom:5px;
+}
 
 .pagination-button{
   border-radius: 4rem;
