update dashboard module

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -296,3 +296,14 @@ td, th {
   text-align: center;
   min-height: 2.1rem;
 }
+
+.chart-icon{
+  width: 30px;
+  height: 30px;
+  margin: 1px;
+}
+
+.chart-icon-container{
+  padding: 4px;
+  //border-radius: 20px;
+}
