--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,6 @@
 page-about {
-
+ .about-page{
+   background-image: url("../assets/about-icons/about-page.png");
+   background-repeat: no-repeat;
+ }
 }
