--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,11 +1,15 @@
 page-about {
- .about-page{
-   //background-image: url("../assets/about-icons/about-page.png");
-   background-repeat: no-repeat;
-   background-position: inherit;
- }
-  .about-details{
+  .about-page {
+    //background-image: url("../assets/about-icons/about-page.png");
+    background-repeat: no-repeat;
+    background-position: inherit;
+  }
+  .about-details {
     padding-top: 5%;
     color: rgba(59, 57, 63, 0.76);
+  }
+
+  .content {
+    padding-bottom: 5px;
   }
 }
