--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,20 +1,24 @@
 page-about {
-  .about {
+  .about-page {
     background-color: #F4F4F4;
   }
-
+  .about-details {
+    padding-top: 5%;
+    color: rgba(59, 57, 63, 0.76);
+  }
+  .content {
+    padding-bottom: 5px;
+  }
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
     background-color: #F4F4F4;
   }
   .item-md,.item-ios{
     background-color: #F4F4F4;
   }
-
   .item-md.item-block .item-inner {
     padding-right: 5px;
     border-bottom: 1px solid #E6E6E7;
   }
-
   .item-ios.item-block .item-inner {
     padding-right: 5px;
     border-bottom: 1px solid #E6E6E7;
