add icons on prfoile as well as sync

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -42,7 +42,14 @@
   margin-top:5px;
   margin-bottom:5px;
 }
-
+.item-card-with-content-center {
+  border: 1px solid #E6E6E7;
+  border-radius: 0.1rem;
+  padding: 5px 10px 5px;
+  margin-top:5px;
+  margin-bottom:5px;
+  text-align: center;
+}
 .pagination-button{
   border-radius: 4rem;
   text-align: center;
