--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -179,11 +179,22 @@
   max-width: 15%;
   margin:auto;
 }
-
 .side-menu-icon{
   width : 1.5rem;
   height : 1.5rem;
 }
+
+.dashboard-item-icon{
+  padding-top: 0.3rem;
+  padding-right: 0.2rem;
+  width : 1.8rem;
+  height : 1.8rem;
+}
+
+.empty-space-padding{
+  margin-top: 2rem;
+}
+
 
 .side-menu-logo-container{
   padding-top:10%;
