--- a/src/components/dashboard-card/dashboard-card.scss
+++ b/src/components/dashboard-card/dashboard-card.scss
@@ -3,8 +3,15 @@ dashboard-card {
     padding-top: 10px;
   }
 
-  .dashboard-card{
+  .dashboard-card-overflow-with-fixed-height{
     overflow:auto;
+    max-height: 410px;
+    min-height: 300px;
+  }
+
+  .dashboard-card-overflow{
+    overflow:auto;
+    min-height: 300px;
   }
 
 }
