--- a/src/pages/dashboard-filter/dashboard-filter.scss
+++ b/src/pages/dashboard-filter/dashboard-filter.scss
@@ -1,12 +1,12 @@
 page-dashboard-filter {
   .dashboardSearch{
-    background-color: #FFFFFF;
+    background-color: #F4F4F4;
   }
   .item-md,.item-ios,.item .item-block .item-md .item-input,.item-inner,.input-wrapper .item-inner{
-    background-color: #FFFFFF;
+    background-color: #F4F4F4;
   }
   .item-md,.item-ios{
-    background-color: #FFFFFF;
+    background-color: #F4F4F4;
   }
 
   .item-md.item-block .item-inner {
