fixing selection of data sets based on new structure

--- a/src/components/organisation-unit-tree/organisation-unit-tree.html
+++ b/src/components/organisation-unit-tree/organisation-unit-tree.html
@@ -7,7 +7,7 @@
   </div>
 
 </ion-item>
-<div *ngIf="hasOrgUnitChildrenOpened[organisationUnit.id]" style="padding-left: 10px">
+<div *ngIf="hasOrgUnitChildrenOpened[organisationUnit.id]" padding-left>
 
   <div *ngIf="!(isOrganisationUnitsFetched && hasOrgUnitChildrenLoaded)">
     <ion-item>
