fixing search input styles as well as seraching on data dimension selections

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,17 +29,15 @@ $list-inset-wp-border-radius : 5px;
 $text-input-ios-show-focus-highlight : false;
 $text-input-md-show-focus-highlight : false;
 
-$searchbar-ios-background-color :#F4F4F4;
-$searchbar-ios-border-color :#E6E6E7;
-$searchbar-ios-input-height: 4.2rem;
+$searchbar-ios-background-color :#ffffff;
+$searchbar-ios-border-color :#ffffff;
 $searchbar-ios-input-text-color : $text-color;
-$searchbar-ios-input-background-color :#F4F4F4;
+$searchbar-ios-input-background-color :#ffffff;
 
-$searchbar-md-background-color :#F4F4F4;
-$searchbar-md-border-color :#E6E6E7;
-$searchbar-md-input-height: 4.2rem;
+$searchbar-md-background-color :#ffffff;
+$searchbar-md-border-color :#ffffff;
 $searchbar-md-input-text-color : $text-color;
-$searchbar-md-input-background-color :#F4F4F4;
+$searchbar-md-input-background-color :#ffffff;
 
 
 
